<resources>
    <string name="app_name">NoteApp</string>
    <string name="notes">Notes</string>
    <string name="header">Header</string>
    <string name="your_note_here">Your note here</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="viewedatetime">Last edited: %1s %2s</string>
    <string name="add_note">Add Note</string>
    <string name="share">Share</string>
</resources>