<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.addnote.AddNoteActivity">

    <EditText
        android:id="@+id/edit_text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:elevation="8dp"
        android:hint="@string/header"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="25"/>

    <EditText
        android:id="@+id/edit_text_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:elevation="8dp"
        android:gravity="start"
        android:hint="@string/your_note_here"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="@id/edit_text_header"
        app:layout_constraintStart_toStartOf="@id/edit_text_header"
        app:layout_constraintTop_toBottomOf="@id/edit_text_header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_body"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>